Corregir configuración de build para Cloudflare Pages - Simplificar next.config.mjs, agregar .env.local, actualizar .gitignore y scripts de limpieza

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,8 +32,10 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "dist/types/**/*.ts",
     "next-env.d.ts",
-    "out/types/**/*.ts"
+    "out/types/**/*.ts",
+    "build/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
