--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:cloudflare": "next build && next export",
+    "clean": "if exist build rmdir /s /q build && if exist dist rmdir /s /q dist && if exist out rmdir /s /q out",
+    "build:cloudflare": "npm run clean && next build",
     "start": "next start",
     "lint": "next lint",
     "pages:build": "npx @cloudflare/next-on-pages",
