--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,6 @@
 name = "terapia-de-pareja-medellin"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = "build"
+
+[build]
+command = "pnpm run build:cloudflare && pnpm run pages:build"
