--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
 # Cloudflare Pages configuration
 name = "terapia-de-pareja-medellin"
 compatibility_date = "2024-01-01"
-pages_build_output_dir = "build"
+pages_build_output_dir = ".vercel/output/static"
