--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.7.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "clean": "rm -rf build dist out || true",
-    "build:cloudflare": "npm run clean && next build",
+    "build:cloudflare": "pnpm run clean && next build",
     "start": "next start",
     "lint": "next lint",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy"
+    "pages:build": "pnpm exec next-on-pages",
+    "preview": "pnpm run pages:build && wrangler pages dev",
+    "deploy": "pnpm run pages:build && wrangler pages deploy"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -49,12 +50,12 @@
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
     "input-otp": "1.4.1",
-    "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "lucide-react": "^0.555.0",
+    "next": "16.0.7",
     "next-themes": "^0.4.4",
-    "react": "^19",
+    "react": "19.2.1",
     "react-day-picker": "^9.0.0",
-    "react-dom": "^19",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -71,7 +72,21 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5",
+    "typescript": "^5.6.3",
     "wrangler": "^3"
+  },
+  "pnpm": {
+    "overrides": {
+      "undici@>=4.5.0 <5.28.5": ">=5.28.5",
+      "esbuild@<=0.24.2": ">=0.25.0",
+      "cookie@<0.7.0": ">=0.7.0",
+      "undici@<5.29.0": ">=5.29.0",
+      "next@>=15.0.0 <=15.4.4": ">=15.4.5",
+      "next@>=15.0.0-canary.0 <15.4.7": ">=15.4.7",
+      "axios@>=1.0.0 <1.12.0": ">=1.12.0",
+      "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+      "glob@>=10.2.0 <10.5.0": ">=10.5.0",
+      "next@>=15.2.0-canary.0 <15.2.6": ">=15.2.6"
+    }
   }
 }
