--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "clean": "rm -rf build dist out || true",
+    "clean": "rimraf build dist out .next",
     "build:cloudflare": "pnpm run clean && next build",
     "start": "next start",
     "lint": "next lint",
@@ -70,10 +70,12 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "rimraf": "^5",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
-    "wrangler": "^3"
+    "wrangler": "^3",
+    "vercel": "47.0.4"
   },
   "pnpm": {
     "overrides": {
