--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "cookie": "^0.7.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1",
